@@ -14,13 +14,13 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with pound.  If not, see <http://www.gnu.org/licenses/>.
-AC_PREREQ([2.69])
+AC_PREREQ([2.71])
 AC_INIT([pound],[4.7],[gray@gnu.org],
 	[pound],[https://github.com/graygnuorg/pound])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_SRCDIR([src/pound.c])
 AC_CONFIG_HEADERS([config.h])
-AM_INIT_AUTOMAKE([1.15 gnu tar-ustar])
+AM_INIT_AUTOMAKE([1.16.5 gnu tar-ustar])
 AC_CANONICAL_HOST
 
 # Checks for programs.
@@ -93,11 +93,6 @@ AC_ARG_WITH([group],
  [AS_HELP_STRING([--with-group=name],[The group that will own the files installed by Pound])],
  [I_GRP="${with_group}"])
 
-AC_ARG_ENABLE([pcreposix],
- [AS_HELP_STRING([--enable-pcreposix],[enable or disable using the pcreposix library (default: enabled if available)])],
- [status_pcreposix=${enableval}],
- [status_pcreposix=yes])
-
 AC_ARG_ENABLE([tcmalloc],
  [AS_HELP_STRING([--enable-tcmalloc],[enable or disable using the tcmalloc library (default: enabled if available)])],
  [status_tcmalloc=${enableval}],
@@ -158,18 +153,9 @@ AM_CONDITIONAL([SET_DH_AUTO],[test "$SET_DH_AUTO" = 1])
 AC_DEFINE_UNQUOTED([SET_DH_AUTO],[$SET_DH_AUTO],
   [Define to 1 of *set_dh_auto macros are available])
 
-if test "$status_pcreposix" != no; then
-  AC_CHECK_LIB([pcre],[pcre_compile])
-  AC_CHECK_LIB([pcreposix],[regcomp])
-  if test $ac_cv_lib_pcreposix_regcomp = yes; then
-    status_pcreposix=yes
-    AC_DEFINE([HAVE_LIBPCREPOSIX],[1],[Define if compiling with libpcreposix])
-  else
-    status_pcreposix=no
-  fi
-fi
+PND_PCREPOSIX
 
-AC_CHECK_HEADERS([getopt.h pthread.h openssl/ssl.h openssl/engine.h pcreposix.h pcre/pcreposix.h])
+AC_CHECK_HEADERS([getopt.h pthread.h openssl/ssl.h openssl/engine.h])
 
 AC_TYPE_UID_T
 AC_TYPE_PID_T
@@ -231,7 +217,11 @@ EOF
 [bufsize=$MAXBUF
 owner_user=$I_OWNER
 owner_group=$I_GRP
-status_pcreposix=$status_pcreposix
+if test $status_pcreposix != no; then
+  status_pcreposix=pcre$status_pcreposix
+else
+  status_pcreposix=$status_pcreposix
+fi
 memory_allocator=$memory_allocator
 if test "$early_pthread_cancel_probe" = 1; then
   status_pthread_cancel_probe=yes
