@@ -1,4 +1,4 @@
-Pound -- history of user-visible changes. 2023-04-19
+Pound -- history of user-visible changes. 2023-05-08
 See the end of file for copying conditions.
 
 Pound is a continuation of the software originally developed by
@@ -6,6 +6,8 @@ Robert Segall at Apsis GmbH, which was officially discontinued
 on 2022-09-19.  See the README.md file for details.
 
 Please send pound bug reports to <gray@gnu.org>
+
+* Support for libpcre2-posix
 
 Version 4.7, 2023-04-17
 
